--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "main": "dist/vue-grid-layout-next.umd.js",
   "module": "dist/vue-grid-layout-next.es.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/packages/index.d.ts",
   "style": "dist/style.css",
   "files": [
     "dist",
